[gd_scene load_steps=4 format=3 uid="uid://c32pgmvy0ipu2"]

[ext_resource type="Script" path="res://game_over.gd" id="1_yfhmw"]
[ext_resource type="FontFile" uid="uid://8nt86tssdbt3" path="res://assets/fonts/Doto_Rounded-Black.ttf" id="2_gbawb"]
[ext_resource type="AudioStream" uid="uid://bfdrhsv27u8cr" path="res://assets/sfx/hurt.wav" id="3_a8isn"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_yfhmw")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.274987, 2.20048e-06, 0.00250979, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverText" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gbawb")
theme_override_font_sizes/font_size = 84
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentScoreLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gbawb")
theme_override_font_sizes/font_size = 46
text = "Current Score: 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighestScoreLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gbawb")
theme_override_font_sizes/font_size = 46
text = "Highest Score: 200"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gbawb")
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="HurtAudioStream" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_a8isn")

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
